--- a/Workstation/atoiniumhpc/requirements.txt
+++ b/Workstation/atoiniumhpc/requirements.txt
@@ -1,6 +1,6 @@
 numpy
 pandas
-django
+scipy
 djangorestframework
 scipy
 scikit-learn
@@ -16,3 +16,24 @@ biopython
 scikit-bio
 qutip
 pennylane
+
+django-cors-headers
+Django>=3.2,<4.0
+djangorestframework
+channels
+celery
+django-celery-beat
+django-celery-results
+django-allauth
+django-debug-toolbar
+django-extensions
+django-filter
+django-cacheops
+django-guardian
+django-two-factor-auth
+pytest-django
+factory_boy
+coverage
+django-storages
+django-environ
+gunicorn
