--- a/Workstation/therapeutics/package.json
+++ b/Workstation/therapeutics/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-webpack-project",
+  "name": "therapeutics",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -9,11 +9,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-<<<<<<< HEAD
+    "axios": "^0.24.0",
     "bootstrap": "^5.3.3",
-=======
     "postcss": "^8.4.49",
->>>>>>> 227faaf6ad639c06b3283c84d6f06f1d221a6643
+    "postcss-loader": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
