--- a/Workstation/therapeutics/public/manifest.json
+++ b/Workstation/therapeutics/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Therapeutics",
+  "name": "Atoinium Therapeutics",
   "icons": [
     {
       "src": "favicon.ico",
